# FlatCraft_2D

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  docs.yml
assets/: input_bindings.json
docs/: Makefile  api.rst  conf.py  index.rst
scripts/: build.bat  build.sh  build_macos.sh
src/: __init__.py  main.py
src/engine/: __init__.py  camera.py  game_window.py  input_manager.py  layers.py  loading_screen.py  player.py  renderer.py
src/ui/: __init__.py  hud.py  main_menu.py  minimap.py  performance_monitor.py
src/utils/: __init__.py  noise.py  profiling.py
src/world/: __init__.py  autotiler.py  generator.py  models.py
