[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "flatcraft-2d"
version = "0.1.0"
description = "2D top-down sandbox with procedural world generation using fractal noise"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Artiukhova Uliana" },
    { name = "Shamko Alexander" },
]
keywords = ["procedural-generation", "perlin-noise", "arcade", "2d-game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "arcade>=2.6.17",
    "perlin-noise>=1.12",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "mypy>=1.9.0",
    "flake8>=7.0.0",
    "black>=24.3.0",
]

[project.scripts]
flatcraft = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["output/", "assets/"]

# Нетипизированные сторонние библиотеки
[[tool.mypy.overrides]]
module = [
    "arcade.*",
    "arcade",
    "scipy.*",
    "scipy",
    "PIL.*",
    "PIL",
    "perlin_noise.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
